Correcciones: Ahora el sistema muestra que usuario registro la merma